<resources>
    <string name="app_name">BreakingBadApp</string>
    <string name="search_hint">Search character\'s name</string>
    <string name="search_btn">Search</string>
    <string name="filter_hint">Filter by season appearance</string>
    <string name="filter_btn">FILTER</string>
    <string name="clear_btn">CLEAR</string>
    <string name="name_title">NAME:</string>
    <string name="default_value">default</string>
    <string name="occupation_title">OCCUPATION:</string>
    <string name="status_title">STATUS:</string>
    <string name="nickname_title">NICKNAME:</string>
    <string name="season_appearance_title">SEASON APPEARANCE:</string>
</resources>