<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etName"
        app:layout_constraintHorizontal_weight=".7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSearch"
        app:layout_constraintBottom_toTopOf="@id/etSeason"/>

    <Button
        android:id="@+id/btnSearch"
        app:layout_constraintHorizontal_weight=".3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/etName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnFilter"/>

    <EditText
        android:id="@+id/etSeason"
        app:layout_constraintHorizontal_weight=".7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/filter_hint"
        android:inputType="number"
        android:digits="0123456789"
        android:maxLength="1"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnFilter"/>

    <Button
        android:id="@+id/btnFilter"
        app:layout_constraintHorizontal_weight=".3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/filter_btn"
        app:layout_constraintTop_toBottomOf="@id/btnSearch"
        app:layout_constraintStart_toEndOf="@id/etSeason"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_btn"
        app:layout_constraintTop_toBottomOf="@id/etSeason"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recyclerView"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/btnClear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>