<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <ImageView
        android:id="@+id/ivImage"
        android:src="@drawable/ic_default_image"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvNameTitle"
        android:text="@string/name_title"
        app:layout_constraintHorizontal_weight=".3"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/ivImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvNameValue"/>

    <TextView
        android:id="@+id/tvNameValue"
        android:text="@string/default_value"
        app:layout_constraintHorizontal_weight=".7"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/ivImage"
        app:layout_constraintStart_toEndOf="@id/tvNameTitle"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvOccupationTitle"
        android:text="@string/occupation_title"
        app:layout_constraintHorizontal_weight=".3"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:padding="4dp"
        android:minLines="2"
        app:layout_constraintTop_toBottomOf="@id/tvNameTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvOccupationValue"/>

    <TextView
        android:id="@+id/tvOccupationValue"
        android:text="@string/default_value"
        app:layout_constraintHorizontal_weight=".7"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:padding="4dp"
        android:minLines="2"
        app:layout_constraintTop_toBottomOf="@id/tvNameValue"
        app:layout_constraintStart_toEndOf="@id/tvOccupationTitle"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvStatusTitle"
        android:text="@string/status_title"
        app:layout_constraintHorizontal_weight=".3"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvOccupationTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvStatusValue"/>

    <TextView
        android:id="@+id/tvStatusValue"
        android:text="@string/default_value"
        app:layout_constraintHorizontal_weight=".7"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvOccupationValue"
        app:layout_constraintStart_toEndOf="@id/tvStatusTitle"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvNickNameTitle"
        android:text="@string/nickname_title"
        app:layout_constraintHorizontal_weight=".3"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvStatusTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvNickNameValue"/>

    <TextView
        android:id="@+id/tvNickNameValue"
        android:text="@string/default_value"
        app:layout_constraintHorizontal_weight=".7"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvStatusValue"
        app:layout_constraintStart_toEndOf="@id/tvNickNameTitle"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvAppearanceTitle"
        android:text="@string/season_appearance_title"
        app:layout_constraintHorizontal_weight=".3"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvNickNameTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvNameValue"/>

    <TextView
        android:id="@+id/tvAppearanceValue"
        android:text="@string/default_value"
        app:layout_constraintHorizontal_weight=".7"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvNickNameValue"
        app:layout_constraintStart_toEndOf="@id/tvAppearanceTitle"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>